<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:id="@+id/bmiLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">


        <TextView
            android:id="@+id/heightNameTextView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/height_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/height_text"
            />

        <SeekBar
            android:id="@+id/heightSeekBar"
            android:max="220"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/weightNameTextView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/weight_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/weight_text"
            />

        <SeekBar
            android:id="@+id/weightSeekBar"
            android:layout_width="match_parent"
            android:max="200"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ageNameTextView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/age_title"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/age_text"
            />

        <SeekBar
            android:id="@+id/ageSeekBar"
            android:layout_width="match_parent"
            android:max="200"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:checkedButton="@id/femaleRadioButton"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/gender_female" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/gender_male" />

        </RadioGroup>

        <TextView
            android:id="@+id/bmiTextView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/bmi_result"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/showBmiTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dietLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_view"
        tools:visibility="visible">

        <TextView
            android:id="@+id/ppmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ppm_title"
            android:textAlignment="center"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/ppmResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/veryLowImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp"
                android:contentDescription="@string/verylow"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/verylow" />

            <ImageView
                android:id="@+id/lowImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp"
                android:contentDescription="@string/low"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/low" />

            <ImageView
                android:id="@+id/normalImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp"
                android:contentDescription="@string/medium"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/medium" />

            <ImageView
                android:id="@+id/highImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp"
                android:contentDescription="@string/high"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/high" />
        </android.support.constraint.ConstraintLayout>></LinearLayout>

</android.support.constraint.ConstraintLayout>